2014-08-06 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp, src/bitvector64.cpp: change constructor to
	compute the sizes of bitvector and bitvector64 during construction
	to avoid thread-safety issue with do_cnt, a problem reported by
	Dominique Prunier

2014-08-02 John Wu <John dot Wu at ACM dot org>
	* src/fastbit-config.h.in: add HAVE_SNPRINTF, change all uses of
	snprintf to check HAVE_SNPRINTF

2014-07-29 John Wu <John dot Wu at ACM dot org>
	* src/capi.cpp: in fastbit_part_list::find, return a nil pointer
	if the existing data partition is not readable.  This
	re-examination was prompted by an error report from Mike Carter.
	* src/dictionary.cpp: Mike Carter indentified a case of support
	for unordered_map without member function reserve, remove the call
	to reserve in readKeys0

2014-07-28 John Wu <John dot Wu at ACM dot org>
	* src/util.h, src/part.cpp: add function ibis::util::cleanDatasets
	* src/query.cpp: in case of query evaluation failure, attempt to
	clean all datasets (by calling ibis::util::cleanDatasets) before
	try again

2014-07-27 John Wu <John dot Wu at ACM dot org>
	* src/part.h: add function clear to clear the existing content of
	a data partition if it is not in use (based on softWriteLock)
	* src/capi.cpp: change fastbit_part_list::clear to be a public
	function that invokes ibis::part::clear to remove the content
	before deleting the object
	* src/category.cpp: move mutex lock to cover the entire body of
	function category::prepareMembers

2014-07-26 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: in function updateData, call emptyCache after the
	time stamp has been checked to avoid unnecessary changes and to
	protect the call with the write lock
	* src/capi.cpp: rearrange the mutex lock to better protect the
	shared/global variable _capi_tlist and _capi_tablex in capi.cpp --
	this addresses an issue of repeated creation and deletion of
	gov.lbl.fastbit.FastBit eventually leading to a seg fault because